@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE timetable SYSTEM "schedule.dtd">
 <!--
 Format of days.xml
     <days>
